# amp-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  PROJECT_BRIEF.md  README.md
.claude/agents/: amp-rs-executor.md  amp-rs-verifier.md
.github/workflows/: ci.yml  release.yml
docs/: USER_MANUAL.md
plans/: PHASE_0_FOUNDATION.md  PHASE_1_STORAGE.md  PHASE_2_EMBEDDINGS.md  PHASE_3_LESSONS.md  PHASE_4_CHECKPOINTS.md  PHASE_5_CODE_INDEXING.md  PHASE_6_FILE_WATCHER.md  PHASE_7_MCP_SERVER.md  PHASE_8_HTTP_CLI.md  PHASE_9_INTEGRATION.md  WAVES.md
scripts/: download-model.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/checkpoints/: mod.rs  service.rs  storage.rs
src/embedding/: mod.rs  onnx.rs  pool.rs
src/http/: mod.rs  routes.rs
src/indexing/: chunker.rs  mod.rs  scanner.rs  storage.rs
src/lessons/: mod.rs  service.rs  storage.rs
src/mcp/: mod.rs  tools.rs
src/storage/: mod.rs  schema.rs  sqlite.rs
src/watcher/: handler.rs  mod.rs  service.rs
tests/: benchmarks_test.rs  checkpoints_test.rs  cli_test.rs  embedding_test.rs  indexing_test.rs  integration_test.rs  lessons_test.rs  storage_test.rs  watcher_test.rs
tests/common/: mod.rs
